# DSX-CSound-App

./: .gitignore  AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  PresetManager.cpp  PresetManager.h  README.md  WavLoader.cpp  WavLoader.h  layout.conf  main.cpp
.run/: task_1.md  task_2.md  task_3.md  task_4.md  task_5.md
.run/artefak_1/: implementation_plan.md
.run/artefak_2/: implementation_plan.md
soundpack/: layer.conf
soundpack/preset1/: config.json
soundpack/preset2/: config.json
soundpack/preset3/: config.json
soundpack/preset4/: config.json
